--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,15 @@
 <h2>Edit Historical Landmark</h2>
 
-<!-- add content here -->
+<form class="" action="/landmarks/<%=@landmark.id%>" method="post">
+  <label for="landmark_name">Name</label>
+  <input type="text" name="landmark[name]" id=name value="<%=@landmark.name%>">
+  <label for="landmark_year_completed">Year Completed</label>
+  <input type="text" name="landmark[year_completed]" id=year_completed value="<%=@landmark.year_completed%>">
 
-<a class="button" href="/figures">Landmarks</a>
+
+  <input type="hidden" name="_method" value="PATCH">
+  <input type="submit" name="" value="Edit Landmark">
+  </form>
+
+<a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
