--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -2,5 +2,16 @@
 
 <!-- add content here -->
 
+<form class="" action="/landmarks" method="post">
+  <label for="">Name:</label>
+  <br>
+  <input type="text" name="landmark[name]" id="landmark_name" value="">
+  <label for=""></label>
+  <br>
+  <input type="text" name="landmark[year_completed]" id="landmark_year_completed" value="">
+  <input type="submit" name="" value="Create New Landmark">
+</form>
+
+
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
