--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,20 @@
 <h2>Create New Landmark</h2>
 
-<!-- add content here -->
+<form action="/landmarks" method="POST">
+  <label for="name">Name</label>
+
+  <input type="text" name="landmark[name]" id="landmark_name">
+
+  <br>
+
+  <label for="year_completed">Year Completed</label>
+  <br>
+    <input type="text" name="landmark[year_completed]" id="landmark_year_completed"></input>
+  <br>
+
+  <input type="submit" value="Create New Landmark">
+</form>
+
 
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
